# hcc

./: .gitignore  Cargo.toml  README.md  a.wasm  argdemo.hc  config.toml  demo.wat  docs.txt  main.hc
.github/workflows/: rust.yml
src/: build.rs  cli.rs  config.rs  logging.rs  main.rs  parse.rs  pdm.rs  wasm.rs
