[package]
name = "hcc"
version = "0.1.0"
edition = "2024"

[dependencies]
halcyon-lib = { git = "https://git.lgatlin.dev/logan/Halcyon.git", branch = "stable" }
clap = {version = "4.5", features=["derive"]}
wasmtime = {version = "34.0", default-features = false, features = ["runtime", "cranelift", "gc", "gc-drc"]}
serde = "1.0.219"
toml = "0.9.5"
clap_mangen = "0.2.29"

