[package]
name = "hcc"
version = "0.1.0"
edition = "2024"

[dependencies]
halcyon-lib = { git = "https://git.lgatlin.dev/logan/Halcyon.git", branch = "stable" }
clap = {version = "4.5", features=["derive"]}
wasmtime = {version = "34.0", default-features = false, features = ["runtime", "cranelift", "gc", "gc-drc"]}
serde = "1.0.219"
toml = "0.9.5"
clap_mangen = "0.2.29"
colored = "3.0.0"
regex = "1.11.2"
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
log = "0.4.28"
gag = "1.0.0"
indicatif = "0.18.0"
human-panic = "2.0.3"

